--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <h1>🔮 Adivina el número que estoy pensando...🔮 </h1>
-    <input type="number" id="userGuess" placeholder="Ingresa un número entre 1 y 100">
-    <button onclick="checkGuess()">Adivinar</button>
+    <div class="container">
+        <h1>🔮 Adivina el número que estoy pensando... 🔮</h1>
+        <input type="number" id="userGuess" placeholder="Ingresa un número entre 1 y 100">
+        <button onclick="checkGuess()">Adivinar</button>
+    </div>
+    
     <p id="feedback"></p>
     <script src="scripts/scripts.js"></script>
 </body>
